# call-quality

./: .gitignore  README.md  requirements.txt
egs/exp-02/: README.md  exp-02-per-call.R  exp-02.R  exp-02.py
egs/exp-04/sample-audio/: g_23_sample.opus
egs/exp-04/src/: encode.cpp
egs/exp-05/: README.md  gen-data.py
egs/exp02/: exp-02-per-call.R
egs/exp04/: README.md
egs/exp04/script/: wav2opus.sh
egs/exp05/: do-vad.py
lib/: utils.py
src/: README.md  dev-01.py  exp-01.py  exp-02.R  exp-02.py  exp-03.py  run.sh
src/exp04/: CMakeLists.txt
src/exp04/script/: gen-html.py  raw2wav.sh
src/exp04/src/: decode.cpp  drop-frames.cpp
tests/: test_utils.py
